Many changes that were brought about by running FindBugs on the codebase.
Cleaned up some unused imports.

FindBug fix suggestions that were carried out:
Call to equals() comparing different types
Comparison of String parameter using == or !=
Dead store to local variable
Field isn't final but should be
Creates an empty zip file entry
Possible null pointer dereference
Field names should start with a lower case letter
Field should be package protected
Inefficient use of keySet iterator instead of entrySet iterator
Invocation of toString on an array
Method invokes inefficient Number constructor; use static valueOf instead
Method invokes inefficient new String() constructor
Method invokes toString() method on a String
Method may fail to close stream
Method uses the same code for two branches
Nullcheck of value previously dereferenced
Should be a static inner class
Suspicious reference comparison
Write to static field from instance method
Unread field


git-svn-id: https://source.sakaiproject.org/contrib/assignment2/trunk@47617 fdecad78-55fc-0310-b1b2-d7d25cf747c9